<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_two">Box two</string>
    <string name="box_five">Box five</string>
    <string name="box_four">Box four</string>
    <string name="box_three">Box three</string>
    <string name="how_to_play">How to play</string>
    <string name="tap_screen_and_buttons">Tap the screen and the buttons</string>
    <string name="red_button">Red</string>
    <string name="yellow_button">Yellow</string>
    <string name="green_button">Green</string>
</resources>